[gd_scene load_steps=25 format=3 uid="uid://3w5l0q4ycym4"]

[ext_resource type="Texture2D" uid="uid://cfqud845ymcnh" path="res://arts/sprites/Face.png" id="1"]
[ext_resource type="Script" path="res://Main.gd" id="1_1fkhw"]
[ext_resource type="Script" path="res://Face.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cs5aytmllktta" path="res://arts/ui/Textbox.png" id="2_lrly4"]
[ext_resource type="Texture2D" uid="uid://dgb13itud0tou" path="res://arts/sprites/hand.png" id="3"]
[ext_resource type="Script" path="res://Hand.gd" id="4"]
[ext_resource type="Shader" path="res://Mask.gdshader" id="6_ygcoy"]
[ext_resource type="FontFile" uid="uid://dmdmftfml05lx" path="res://arts/ui/Comfortaa-Regular.ttf" id="7_b8lk8"]
[ext_resource type="Texture2D" uid="uid://iiw63p0sj3ut" path="res://arts/sprites/handshadow.png" id="8_qboru"]
[ext_resource type="Texture2D" uid="uid://cthljum2pqxy2" path="res://arts/ui/Buttons.png" id="11_ens3u"]
[ext_resource type="Texture2D" uid="uid://b7itsb7i162yu" path="res://arts/sprites/mask3.png" id="11_mytbe"]
[ext_resource type="Texture2D" uid="uid://bp4o2qscu0b6h" path="res://arts/sprites/mask2.png" id="11_tajuq"]
[ext_resource type="Texture2D" uid="uid://bbff27a633wfp" path="res://arts/ui/ButtonPressed.png" id="12_8sfje"]
[ext_resource type="Texture2D" uid="uid://clydi0q18w78i" path="res://arts/ui/ButtonHover.png" id="13_anff6"]
[ext_resource type="Script" path="res://scripts/ButtonEffects.gd" id="14_tfw7i"]

[sub_resource type="CircleShape2D" id="1"]
radius = 144.741

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ri0t"]
shader = ExtResource("6_ygcoy")
shader_parameter/alpha = 1.0
shader_parameter/main_texture = ExtResource("3")
shader_parameter/mask_texture = ExtResource("11_tajuq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p7p45"]
shader = ExtResource("6_ygcoy")
shader_parameter/alpha = 0.48
shader_parameter/main_texture = ExtResource("8_qboru")
shader_parameter/mask_texture = ExtResource("11_tajuq")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5ae50"]
blend_mode = 3
light_mode = 1

[sub_resource type="Animation" id="Animation_y7iiq"]
resource_name = "Idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(-2, -2, 1),
"update": 0,
"values": [Vector2(0, 256), Vector2(0, 280), Vector2(0, 256)]
}

[sub_resource type="Animation" id="Animation_nal20"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(586, 206)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textbox:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.196437]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textbox:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.39416, 1.39416)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Textbox:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Face:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 277)]
}

[sub_resource type="Animation" id="Animation_46v7k"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 1),
"update": 0,
"values": [Vector2(0, 779), Vector2(0, 596), Vector2(0, 627), Vector2(0, 256)]
}

[sub_resource type="Animation" id="Animation_wiys2"]
resource_name = "speaking"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.6, 0.8, 2.6, 2.9, 3, 3.2, 3.4, 4.7, 5),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, 1),
"update": 0,
"values": [Vector2(0, 256), Vector2(0, 297), Vector2(0, 268), Vector2(0, 277), Vector2(0, 256), Vector2(0, 261), Vector2(0, 277), Vector2(0, 268), Vector2(0, 297), Vector2(0, 256), Vector2(0, 262), Vector2(0, 256)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 1.9, 3.3, 4.7, 5),
"transitions": PackedFloat32Array(0.5, 2, -2, -2, -2, 0.5, -2),
"update": 0,
"values": [Vector2(253, 279), Vector2(584, 228), Vector2(672, 250), Vector2(672, 232), Vector2(672, 258), Vector2(672, 250), Vector2(672, 346)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textbox:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [1.60461, 0.39376, 0.196437]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Textbox:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(0.298134, 0.298134), Vector2(1.42659, 1.42659), Vector2(2.09659, 2.09659)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Textbox:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 4.7, 5),
"transitions": PackedFloat32Array(0.5, 2, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.662745, 0.662745, 0.662745, 0.560784), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Textbox/VBoxContainer/RichTextLabel:visible_ratio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.8, 2.6, 3.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [true],
"method": &"change_speech_face"
}, {
"args": [false],
"method": &"change_speech_face"
}, {
"args": [true],
"method": &"change_speech_face"
}, {
"args": [false],
"method": &"change_speech_face"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5844e"]
_data = {
"Idle": SubResource("Animation_y7iiq"),
"RESET": SubResource("Animation_nal20"),
"spawn": SubResource("Animation_46v7k"),
"speaking": SubResource("Animation_wiys2")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_1fkhw")

[node name="Textbox" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(586, 206)
rotation = 0.196437
scale = Vector2(1.39416, 1.39416)
texture = ExtResource("2_lrly4")

[node name="VBoxContainer" type="VBoxContainer" parent="Textbox"]
offset_left = -102.0
offset_top = -66.0
offset_right = 137.0
offset_bottom = 62.0
rotation = -0.00139626
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Textbox/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_b8lk8")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Don't forget to drink water![/center]"
fit_content = true
scroll_active = false

[node name="Face" type="Sprite2D" parent="."]
position = Vector2(0, 277)
texture = ExtResource("1")
offset = Vector2(256, 0)
script = ExtResource("2")

[node name="FaceShadow" type="Sprite2D" parent="Face"]
modulate = Color(0, 0, 0, 0.52549)
z_index = -1
position = Vector2(0, 12)
texture = ExtResource("1")
offset = Vector2(256, 0)

[node name="Area2D" type="Area2D" parent="Face"]
position = Vector2(264, 12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Face/Area2D"]
shape = SubResource("1")

[node name="Hand" type="Sprite2D" parent="."]
z_index = 100
z_as_relative = false
material = SubResource("ShaderMaterial_5ri0t")
position = Vector2(672, 315)
scale = Vector2(0.909239, 0.909239)
texture = ExtResource("3")
offset = Vector2(86.678, 116.821)
script = ExtResource("4")

[node name="Handshadow" type="Sprite2D" parent="Hand"]
modulate = Color(1, 1, 1, 0.360784)
z_index = -1
material = SubResource("ShaderMaterial_p7p45")
position = Vector2(90, 137)
texture = ExtResource("8_qboru")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(512, 256)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
material = SubResource("CanvasItemMaterial_5ae50")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_mytbe")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Change" type="TextureButton" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("11_ens3u")
texture_pressed = ExtResource("12_8sfje")
texture_hover = ExtResource("13_anff6")
stretch_mode = 3
script = ExtResource("14_tfw7i")

[node name="Label2" type="Label" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2/Change"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_b8lk8")
theme_override_font_sizes/font_size = 30
text = "Switch Tuber"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="TextureButton" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("11_ens3u")
texture_pressed = ExtResource("12_8sfje")
texture_hover = ExtResource("13_anff6")
stretch_mode = 3
script = ExtResource("14_tfw7i")

[node name="Label" type="Label" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2/SFX"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_b8lk8")
theme_override_font_sizes/font_size = 30
text = "Sound - On"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Switch" type="TextureButton" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("11_ens3u")
texture_pressed = ExtResource("12_8sfje")
texture_hover = ExtResource("13_anff6")
stretch_mode = 3
script = ExtResource("14_tfw7i")

[node name="Label2" type="Label" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Switch"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_b8lk8")
theme_override_font_sizes/font_size = 30
text = "Move Screen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="TextureButton" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("11_ens3u")
texture_pressed = ExtResource("12_8sfje")
texture_hover = ExtResource("13_anff6")
stretch_mode = 3
script = ExtResource("14_tfw7i")

[node name="Label3" type="Label" parent="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_b8lk8")
theme_override_font_sizes/font_size = 30
text = "Quit
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5844e")
}
autoplay = "spawn"
playback_default_blend_time = 0.5

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="input_event" from="Face/Area2D" to="Face" method="_on_Area2D_input_event"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2/Change" to="." method="_on_change_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer2/SFX" to="." method="_on_sfx_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Switch" to="." method="_on_switch_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="Face" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
